Add loginErrorUrl on config.properties

--- a/qa-automation/src/test/java/com/digitalbank/qaautomation/resources/config.properties
+++ b/qa-automation/src/test/java/com/digitalbank/qaautomation/resources/config.properties
@@ -1,3 +1,4 @@
 #APP ROUTES
 app.loginUrl = http://digitalbank.upcamp.io/bank/login
+app.loginErrorUrl = http://digitalbank.upcamp.io/bank/login?error
 app.homeUrl = http://digitalbank.upcamp.io/bank/home
